# bachelor

./: .editorconfig  .gitignore  .gitmodules
ros/src/imutype/: CMakeLists.txt  package.xml  requirements.txt
ros/src/imutype/config/: default.yaml
ros/src/imutype/experiments/2017-02-17-check-pipeline/: config.yaml  epoch_stats.csv  model-00000.npz  model-00100.npz  model-00200.npz  model-00300.npz  model-00400.npz  model-00500.npz  model-00600.npz  model-00700.npz  model-00800.npz  model-00900.npz  model-01000.npz  model-01100.npz  model-01200.npz  model-01300.npz  model-01400.npz  model-01500.npz  model-01600.npz  model-01700.npz  model-01800.npz  model-01900.npz  model-02000.npz  model-02100.npz  model-02200.npz  model-02300.npz  model-02400.npz  model-02500.npz  model-02600.npz  model-02700.npz  model-02800.npz  model-02900.npz  model-03000.npz  model-03100.npz  model-03200.npz  model-03300.npz  model-03400.npz  model-03500.npz  model-03600.npz  model-03700.npz  (+291 more)
ros/src/imutype/experiments/2017-03-29-phase-1/: config.yaml  epoch_stats.json  model.npz  recording.bag
ros/src/imutype/experiments/2017-04-12-TGBYHNUJM_/: config.yaml  model.npz  (+1 more)
ros/src/imutype/msg/: Angles.msg  ImuEvent.msg  KeyEvent.msg  MergedState.msg  SensorState.msg  VisualizationData.msg
ros/src/imutype/scripts/: apply_net.py  convert_imu_events.py  emulate_keyboard.py  export_visualization_data.py  keyboard_listener.py  serial_parser.py
ros/src/imutype/tools/: confusion.py  convert_stats.py  extract_samples.py  learn.py  plot_delay.py  plot_samples.py  plot_stats.py  random-keys.py
(+148 files in other folders)
