<?xml version="1.0"?>
<package>
  <name>imutype</name>
  <version>0.0.1</version>
  <description>Reads the serial protocol and publishes them on a ROS topic.</description>
  <maintainer email="2bienkow@informatik.uni-hamburg.de">Paul Bienkowski</maintainer>
  <maintainer email="3konietz@informatik.uni-hamburg.de">Carolin Konietzny</maintainer>
  <author email="2bienkow@informatik.uni-hamburg.de">Paul Bienkowski</author>
  <author email="3konietz@informatik.uni-hamburg.de">Carolin Konietzny</author>
  <license>TODO</license>
  <url type="website">https://github.com/opatut/bachelor</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

  <export />
</package>
